Fortify scan enabled